# DARWIN

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
darwin/: __init__.py  ids.py
docs/: ADAPTER_ENDPOINTS_v0_9.md  ALIAS_AUTHORITY_CHAIN_v0_6.md  ALIAS_REGISTRY_v0_5.md  ARCHITECTURE_v0_1.md  AUTHORITY_AUDIT_TRACES_v0_7.md  AUTHORITY_OUTCOME_QUERIES_v0_8.md  AUTHORITY_OUTCOME_RETENTION_v0_8.md  AUTH_BRIDGE_v0_3.md  DARWIN_Design_Dossier_v0_1.md  DARWIN_Identity_Trust_Authentication_v0_1.md  DARWIN_Packet_Checkpoint_Lane_Protocol_v0_1.md  DARWIN_Registry_Hub_Data_Model_v0_1.md  DARWIN_Simulator_Build_Plan_v0_1.md  DARWIN_Traffic_Hub_Routing_Model_v0_1.md  DEMO_GUIDE_v0_1.md  DEVELOPMENT.md  ENCRYPTED_DELIVERY_POLICY_GATE_v1_1.md  ENCRYPTED_DELIVERY_REQUESTS_v1_1.md  ENCRYPTED_DELIVERY_RESULTS_v1_1.md  ENCRYPTED_DELIVERY_RESULT_HISTORY_v1_1.md  ENCRYPTED_ENVELOPES_v1_0.md  ENCRYPTION_IDENTITIES_v1_0.md  ENCRYPTION_POLICY_DECISIONS_v1_0.md  ENCRYPTION_POLICY_v1_0.md  ENCRYPTION_REGISTRY_v1_0.md  LANE_ADMISSION_POLICY_v1_2.md  LANE_REGISTRY_v0_9.md  LANE_SIGNATURES_v0_9.md  MAILBOX_ADDRESSING_v0_9.md  MAILBOX_REGISTRY_v0_9.md  MESSAGE_DELIVERY_v0_9.md  MOVE_CONTRACT_AUTH_v0_4.md  PRIVATE_POLLING_DESCENT_v1_2.md  REGISTRY_HISTORY_QUERIES_v0_7.md  RELEASE_NOTES_v0_1.md  RELEASE_NOTES_v0_2.md  RELEASE_NOTES_v0_2_DRAFT.md  RELEASE_NOTES_v0_3.md  RELEASE_NOTES_v0_3_DRAFT.md  RELEASE_NOTES_v0_4.md  (+42 more)
scenarios/: 001_basic_registration.yaml  002_name_conflict.yaml  003_lane_open_and_send.yaml  004_relocation_pause_resume.yaml  (+62 more)
(+161 files in other folders)
