[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "darwin-sim"
version = "0.6.0"
description = "Simulator-first prototype for DARWIN: Direct-Access Registration Window Interface Network."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "DARWIN contributors" }
]
keywords = [
  "network-simulator",
  "identity",
  "routing",
  "checkpointing",
  "mobility",
  "DARWIN"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking",
  "Topic :: Software Development :: Testing"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]
cli = [
  "rich>=13.7",
  "PyYAML>=6.0"
]
routing = [
  "networkx>=3.2"
]

[project.scripts]
darwin-sim = "darwin.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["darwin"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
